--- a/3 CSS/styles.css
+++ b/3 CSS/styles.css
@@ -1,235 +1,191 @@
-body {
-margin: 0;
-font-family: 'Lucida Grande', tahoma,verdana,arial,sans-serif; line-height: 1.28;
+body{
+	background-image: url("grid.png");
+	height:750px;
+	
 }
-
-#navwrapper { width: 100%; height: 82px;
-background-color: #3b5998;
+.fb-header-base{
+	width:100%;
+	height:90px;
+	position:absolute;
+	top:0;
+	left:0;
+	color:white;
+	z-index:7;
+	font-family:verdana;
+	-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
 }
-
-#navbar { margin: 0 auto; width:980px; height:59px;
+.fb-header{
+	width:100%;
+	height:90px;
+	position:absolute;
+	background:#3d5b99;
+	top:0;
+	left:0;
+	color:white;
+	z-index:7;
+	font-family:verdana;
+	
 }
-
-#contentwrapper { width: 100%; height: 606px;
-background-color: #edf0f5;
-
-
-
-
+#img1{
+	left:178px;
+	height:50px;
+	width:100px;
+	top:25px;
 }
-
-#content { margin: 0 auto; width:980px;
-padding-top:20px;
+#form1{
+	left:750px;
+	height:60px;
+	width:180px;
+	top:20px;
+	font-family:verdana;
+	font-size:12px;
 }
-
-h1 {
-font-family: tahoma,verdana,arial,sans-serif; font-size: 38px;
-letter-spacing:0.05px; margin: 0;
-color:#fff;
--webkit-font-smoothing: antialiased;
+#form2{
+	left:940px;
+	height:60px;
+	width:250px;
+	top:20px;
+	font-family:verdana;
+	font-size:12px;
 }
+.submit1{
+	left:1130px;
+	top:35px;
+	background:#5b7bc0;
+	color:white;
+	position:fixed;
+	z-index:20;
+	height:22px;
+	width:50px;
+	cursor:pointer;
+	
 
-.logowrapper { display: block; padding: 30px 0;
+	
 }
-
-#button { position:relative; width:45px; height:18px;
-background-color: #5b72a9; border: 1px solid #999;
-border-color:#8b9dc3 #2f477a #29447e #1a356e;
--webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, .1); cursor:pointer;
-font-size:11px; font-weight:bold; text-align:center; color:#fff;
-}
-
-.tablewrapper { float:right; margin-top:15px;
-}
-
-.row1 {
-
-
-
-
-
-color:#fff;
-font-size:11px; width:164px; cursor:pointer;
-}
-
-.inputtext {
-border-color: #1d2a5b; margin: 0;
-width: 142px;
-border: 1px solid #bdc7d8; margin: 0;
-padding: 3px;
-background-color: #FAFFBD;
-}
-
-.row2 {
-
-color:#9daccb; font-size:11px; width:164px; cursor:pointer;
-}
-
-#leftbod { width:565px; display:inline-block;
-}
-
-.connect { width:409px; height: 72px;
-padding: 42px 0 24px; font-size: 26px;
-font-weight: 700; line-height: 36px; color: #333; display:inline-block;
-}
-
-.leftbar {
-
-
-
-
-padding-bottom:10px; margin-top:20px;
-}
-
-.iconwrap {
-margin-right:20px; width:55px;
+.fb-body{
+	position:absolute;
+	left:0px;
+	top:90px;
+	width:100%;
+	height:645px;
+	
 
 }
-
-.rowtext {
-font-size:16px; font-weight:bold; color:#333;
+#intro1{
+	left:178px;
+	top:20px;
+	font-family:verdana;
+	font-size:20px;
+	color:#142170;
+	height:75px;
+	width:550px;
 }
-
-
-.fb1 {
-display:inline-block; vertical-align: middle;
+#intro2{
+	left:750px;
+	top:20px;
+	font-family:verdana;
+	font-size:30px;
+	color:#000;
+	font-weight:bold;
+	height:75px;
+	width:500px;
 }
-
-.rowtext2 {
-font-size:15px; color:#666; margin-left:10px;
+#img2{
+	top:130px;
+	left:178px;
+	width:537px;
+	height:195px;
 }
-
-#rightbod { display:inline-block; vertical-align:top; width:399px; height:200px; float:right;
+#intro3{
+	left:750px;
+	top:70px;
+	font-family:verdana;
+	font-size:18px;
+	color:#000;
+	height:50px;
+	width:300px;
 }
-
-.signup {
-font-size:36px;
--webkit-font-smoothing: antialiased; font-weight:700;
-margin-bottom:5px;
+#form3{
+	top:120px;
+	left:750px;
+	font-family:verdana;
+	font-size:20px;
+	color:#142170;
+	width:450px;
+	height:495px;
+	
 }
-
-
-
-
-.bolder {
-font-family: 'Open Sans',sans-serif; text-rendering:optimizelegibility; color:#333;
+#namebox{
+	width:200px;
+	height:40px;
+	border-radius:5px 5px 5px 5px;
+	background:white;
+	padding:10px;
+	font-size:18px;
+	margin-top:8px;
+	border-width: 1px;
+	border-style:solid;
+	border-color: gray;
 }
-
-.free {
-font-size:19px; margin-bottom:20px;
+#mailbox{
+	width:408px;
+	height:40px;
+	border-radius:5px 5px 5px 5px;
+	background:white;
+	padding:10px;
+	font-size:18px;
+	margin-top:8px;
+	border-width: 1px;
+	border-style:solid;
+	border-color: gray;
 }
-
-.formbox {
-display: inline-block; width:399px;
+#r-b{
+	font-size:12px;
+	height:15px;
+	width:15px;
 }
-
-.inputbody {
-display: inline-block; font-size: 18px; padding: 8px 10px;
-border: 1px solid #bdc7d8;
--webkit-border-radius: 5px; color:#333;
-margin-bottom:10px;
+.button2{
+	width:250px;
+	height:40px;
+	left:750px;
+	top:625px;
+	background:green;
+	font-family:verdana;
+	font-size:18px;
+	color:white;
+	border-radius:5px 5px 5px 5px;
+	border-width: 1px;
+	border-style:solid;
+	border-color: gray;
+	cursor:pointer;
+	outline:none;
+	
 }
-
-::-webkit-input-placeholder { color: #999;
+#intro4{
+	font-family:verdana;
+	font-size:12px;
+	color:gray;
+	
 }
-
-::-moz-placeholder { color: #999;
+#intro5{
+	font-family:verdana;
+	font-size:14px;
+	color:gray;
+	
 }
-
-:-ms-input-placeholder { color: #999;
+.fb-body-footer{
+	width:100%;
+	position:absolute;
+	left:0px;
+	height:80px;
+	background:white;
+	top:700px;
+	
 }
-
-.in1 { width:172px;
-}
-
-.in2 {
-
-
-
-
-width:377px;
-}
-
-.fr {
-float:right;
-}
-
-.fl {
-float:left;
-}
-
-.bday {
-font-size:19px; color:#141823;
--webkit-font-smoothing: antialiased; margin-bottom:5px;
-}
-
-.selectbody {
-display: inline-block; height:30px;
-font-size: 13px;
-border: 1px solid #bdc7d8;
--webkit-border-radius: 5px; color:#141823;
-
-}
-
-.why {
-font-size: 11px; color: #3b5998; width:150px; margin-left:10px; cursor:pointer;
-}
-
-.h:hover {
-text-decoration: underline;
-}
-
-.gender {
-font-size: 18px; color: #141823;
-
-
-
-
-cursor: pointer; padding: 0 10px 0 3px; margin-right: 4px;
-line-height: 18px; vertical-align: middle;
-}
-
-.spanpad {
-padding: 5px 0 5px 4px; display: inline-block;
-}
-
-.mt1 {
-margin-top:15px;
-}
-
-.m0 {
-margin: 0;
-}
-
-.agree {
-font-size: 11px; color: #777; width:316px;
-margin: 11px 0 11px ;
-}
-
-.link { color:#3b5998;
-display: inline-block; cursor: pointer;
-}
-
-.signbut {
-font-size: 19px; font-weight: 700; letter-spacing: 1px; color:#fff;
-min-width: 194px; padding: 7px 20px; text-align: center;
--webkit-border-radius: 5px;
-background: -webkit-linear-gradient(#67ae55, #578843);
-
-
-
-
--webkit-box-shadow: inset 0 1px 1px #a4e388; border: 1px solid;
-border-color: #3b6e22 #3b6e22 #2c5115; margin-top: 10px;
-margin-bottom: 10px;
-text-shadow: 0 1px 2px rgba(0,0,0,.5); cursor:pointer;
-}
-
-.signbut:hover {
-background: -webkit-linear-gradient(#79bc64, #578843);
-}
-
-.create {
-border-top: 1px solid #a0a9c0; color: #666;
-font-size: 13px; font-weight: bold; margin-top: 10px; padding-top: 15px;
+#fb-body-footer-base{
+	width:900px;
+	top:15px;
+	left:200px;
+	color:blue;
+	height:60px;
 }
